# whalebone

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
app/: .dockerignore  Dockerfile  app.py  infrastructure.py  presentation.py  pyproject.toml
app/model/: exceptions.py  forms.py  json.py  user.py
app/tests.py/: test_infrastructure.py
proxy/: Dockerfile  conf
